--- a/MainBit.Users.csproj
+++ b/MainBit.Users.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Controllers\PrivateController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Drivers\UserPersonalDataPartDriver.cs" />
+    <Compile Include="Events\UserEventHandler.cs" />
     <Compile Include="Extensions\UrlHelperExtensions.cs" />
     <Compile Include="Handlers\UserPersonalDataPartHandler.cs" />
     <Compile Include="Migrations\UserPersonalDataMigrations.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Permissions.cs" />
     <Compile Include="Routes.cs" />
     <Compile Include="Security\AuthorizationEventHandler.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Placement.info" />
@@ -132,6 +134,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\UserPersonalData.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Account\RequestLostPassword.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
